<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="15dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp">

    <TextView

        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email_pseudo"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/login"
        android:hint="@string/prompt_email_pseudo"
        android:layout_below="@id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:id="@+id/passwordText"/>

    <EditText
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_sign_in_short"/>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>