<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <RelativeLayout
        android:id="@+id/container"
        style="@style/NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:id="@+id/textView" />

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/start"
            android:layout_marginBottom="47dp"
            android:layout_above="@+id/quit"
            android:layout_alignLeft="@+id/quit"
            android:layout_alignStart="@+id/quit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:id="@+id/quit"
            android:layout_marginBottom="89dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/drawer_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="25"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/white"
        android:dividerHeight="0dp"
        android:groupIndicator="@null"/>

</android.support.v4.widget.DrawerLayout>